--- a/Dev_API.ServicoExterno/Dev_API.ServicoExterno.csproj
+++ b/Dev_API.ServicoExterno/Dev_API.ServicoExterno.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Dev_API.Dominio\Dev_API.Dominio.csproj" />
   </ItemGroup>
 
